--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'io.coil-kt:coil:1.0.0'
+    implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
 
     testImplementation 'junit:junit:4.13.1'
 
